static resources attached (jquery); some security improvements

--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,14 @@
             <version>1.2.17</version>
         </dependency>
 
+        <!--code style and validation-->
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
+
     </dependencies>
     
 </project>
