--- a/pom.xml
+++ b/pom.xml
@@ -145,7 +145,11 @@
             <version>3.0.1</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.4.2</version>
+        </dependency>
     </dependencies>
     
 </project>
