Wellcome page is added.

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,3 +1,3 @@
 db.connection.url=jdbc:mysql://localhost:3306/gps_tracks_db_liquibase
-db.connection.username=root
-db.connection.password=baikal11
+db.connection.username=root2
+db.connection.password=root2
